# mat-vis

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: isolate_adsorbate.yaml
configs/examples/: view_catalyst.yaml  view_mof.yaml
configs/visualization/: catalyst_diffusion.yaml  crystal_diffusion.yaml  crystal_diffusion_inorganic.yaml  mof_diffusion.yaml  view_adsorbate.yaml  view_adsorbates.yaml  view_catalyst.yaml  view_mof.yaml  view_slab.yaml
data/sample/: adsorbate.cif  adsorbate_CO2.xyz  co2_with_cell.xyz  framework.xyz  mof.cif  mof.ovito  mof_clean.xyz  molecular_crystal.cif
data/sample/catalyst/: 11.cif  1234.cif  3.cif  321.cif  555.cif  6.cif  777.cif  7890.cif  9090.cif  9122.cif
examples/: adsorbate.xyz  inorganic_crystal.cif  slab.cif
examples/adsorbates/: H2O.xyz  H2O2.xyz  O2.xyz  OH.xyz  OOH.xyz
scratch/: search_color_schemes.py  search_periodic_shift.py  search_tiling.py  visualize_flow_matching.py  visualize_flow_matching_backup.py  viz_framework.py  viz_mof_adsorbate.py
scripts/: run_isolate_adsorbate.sh
scripts/examples/: visualize_all_samples.sh
scripts/visualization/: run_catalyst_diffusion.sh  run_crystal_diffusion.sh  run_mof_diffusion.sh  view_cif.sh  view_separate_structures.sh  view_structures.sh  visualize_all.sh
src/: config.py  diffusion_visualization.py  isolate_adsorbate.py  rendering.py  structure_visualization.py  utils.py  visualization.py
